volexc/tests/ui/parse_unclosed_bracket.out
Error: found "}" but expected "]"
   ╭─[parse_unclosed_bracket.vol:4:1]
   │
 4 │ }
   │ ┬  
   │ ╰── Unexpected '}'
   │ 
   │ Note: Expected one of: ']'
───╯